style.css
/*CSS variables*/

:root {
    --primary-color: #2F5BB6;
    --secondary-color: #fdf954;
    --bg-white: white;
    --bg-grey: #f2f5fa;
    --text-color: #021e4d;
    --brand-font: "Bebas Neue";

}

body {
    background-color: var(--bg-white); 
    /* had to include this as a weird 8px margin seems to be applied by default by browsers */
    margin: 0;
    font-family: "Montserrat", Helvetica, Arial, sans-serif;
    font-size: 16px;
    color: var(--text-color);
}

hr {
    margin: 0 0 40px 0;
    width:80px;
    border-width:4px;
    border-style:solid;
    border-image-source: linear-gradient(to left, var(--primary-color) 5%,var(--secondary-color));
    border-image-slice: 1;
    text-align: left;
}

h1{
font-family: var(--brand-font);
font-weight: 500;
font-size: 80px;
color:var(--primary-color);
/* negative letter spacing for tighter kerning at bigger font sizes*/
letter-spacing: -1px;
margin: 0 16px 16px 0;
line-height: 64px;
}

h2{
font-family: var(--brand-font);
font-size: 64px;
font-weight: 500;
color:var(--text-color);
}

h3 {
    font-size: 32px;
    margin-bottom: 16px;  
    color: var(--text-color)
}

p {
    font-size: 24px;
    max-width: 470px;
    color: var(--text-color)
}

a {
    color: var(--primary-color);
}

a:hover {
    font-weight: bold;
}

a:active {
    background-color: var(--bg-grey);
    border-bottom: 2px solid var(--secondary-color);
    text-decoration: none;
}

/* nav bar section at top */
header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: var(--bg-white);
    box-shadow: 0 0 32px rgba(47, 91, 182, 0.25);;
}

a {
    color: var(--primary-color);
}

a:hover {
    font-weight: bold;
}

/* Using flexbox for the header keeps the logo in line with the nav links*/
/* Becky McG logo image on left of header */
#logo {
    width: 160px;
    padding: 16px;
}

#logo:hover {
    scale: 1.10;
    transform: rotate(-20deg);
}

/* Links for the nav */
.nav-list {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin: 16px 16px;
    padding: 8px;
    gap: 16px 24px;
    list-style: none;
    justify-content: space-around;
}

.nav-list li a {
    flex: 0 1 200px ;
    color:var(--text-color);
    text-align: center;
    font-size: 40px;
    font-weight: 500;
    text-transform: uppercase;
    font-family: "Bebas Neue", Helvetica, Arial, sans-serif;
    text-decoration: none;
}

.nav-list li a:hover {
    color: var(--primary-color);
    border-bottom: 4px solid var(--primary-color);
}

.nav-list li a:active {
    color: var(--primary-color);
    background-color: var(--bg-grey);
    border-bottom: 4px solid var(--secondary-color);
}

/* links & hover states for top nav */
li a:hover {
    color: var(--primary-color);
}

li a:active {
    color: var(--primary-color);
    background-color: var(--secondary-color);
}

/* Icon hover & active states*/
i:hover {
    scale: 1.10;
}

i:active {
    scale: 0.95;
}

/* constrain content to 1920px for wide screen sizes - better readability */
#content {
    margin: 0 auto;
    max-width: 1920px;
}

/* Hero image for the intro section */
#hero{
    background: linear-gradient(to left, transparent, var(--primary-color) ), url(images/about.jpg);
    background-repeat: no-repeat;
    height: 600px;
    background-position-y: 25%;
    background-size: cover;
    padding: 24px;
    margin-bottom: 32px;
    display: flex;
    justify-content:center;
    align-items:flex-end;
}

#hero-title {
    flex: 1 1 auto;
}

#hero-title h1 {
    color:var(--secondary-color);
    font-size: 10rem;
    letter-spacing: -1px;
    line-height:8rem;
    text-align: left;
    padding: 0px;
}

#hero-title h2 {
    color: var(--bg-white);
    margin-top: 8px;
    font-size: 3rem;
    line-height: 3rem;
    text-align: left;
    padding: 0px;
}

#about {
    padding: 16px 42px;
}

.profile {
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    align-content: center;
    justify-content:space-between;
}

#about img{
    max-width: 360px;
    max-height: 3600px;
    margin-bottom: 40px;
    border: 8px solid;
    /* experimental css for gradients in border - doesn't work on circle images through border radius */
    border-image-source: linear-gradient(var(--primary-color),var(--secondary-color));
    border-image-slice: 1;
}

#work, #contact{
    padding: 16px 42px;
    margin-bottom: 40px;
    margin-top: 56px;
}

#disciplines, #message {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    gap: 24px;
}

article {
    flex: 0 0 400px;
    padding: 16px;
    background-color: var(--bg-grey);
    text-align: center;
}

article:hover {
    scale: 1.05;
}

article:active{
    scale: 0.95;
    background-color: var(--primary-color);
}

article h2:hover{
    text-decoration: underline;
}

article h2:active{
    color: var(--bg-white);
}

article a{
    text-decoration: none;
}

#clients {
    padding: 16px 42px;
    margin-bottom: 40px;
}

#testimonials {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-evenly;
}

#testimonials li {
    flex: 1 1 360px;
    padding: 16px 16px;
    list-style: none;
}

/* Changed client tesimonial section to use semantic html elements */
blockquote {
    font-size: 24px;
    font-style:italic;
    font-weight: 300;
    margin: 16px 0;
}

#testimonials::before {
content: '“';
font-family: 'Bebas Neue';
font-style: normal;
position: absolute;
left: 40px;
color: var(--secondary-color);
font-size: 240px;
font-weight: 900;
z-index: -1;
vertical-align: text-top;
}

#testimonials::after {
content: '”';
font-family: 'Bebas Neue';
font-style: normal;
position:relative;
right: 10px;
color: var(--secondary-color);
font-size: 240px;
font-weight: 900;
z-index: -1;
}

figcaption {
    color: var(--primary-color);
    font-style: normal;
    font-size: 16px;
    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
    font-weight: 500;
}

footer {
    border-bottom: 8px solid;
    border-image-source: linear-gradient(to left, var(--primary-color) 5%,var(--secondary-color));
    border-image-slice: 1;
    padding: 24px;
    text-align: center;
    color:var(--primary-color);
    background-color: var(--bg-grey);
}

/* Some cheeky css to change default highlight colour when selecting text */
::selection {
    background:var(--secondary-color);
}
/* reverses colour so light headings are readable when selected */
h1::selection, h2::selection {
    color: var(--primary-color)
}

